# Transcription_Pearl

./: .gitignore  pyproject.toml
