[tool.poetry]
name = "transcription-pearl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"] # Ganti dengan nama dan email Anda
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8" # Sesuaikan dengan versi Python Anda jika perlu
pandas = "==2.2.2"
pymupdf = "==1.24.5"
pillow = "==10.3.0"
openai = "==1.34.0"
anthropic = "==0.28.0"
google-generativeai = "==0.6.0"
tkinterdnd2 = "==0.4.2"
opencv-python = "==4.10.0.84"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
